# SPDX-FileCopyrightText: Copyright (c) <2026> NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "cuda-lang"
version = "0.0.1"
description = "Experimental SIMT programming model."
requires-python = ">=3.10, <3.14"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "cuda.lang",
  "cuda.lang.*",
]

[tool.setuptools.package-data]
"cuda.lang" = ["bin/*"]
